--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Alert!</title>
     <style>
-        h1{
+      
+        a{
             text-align: center;
+            text-decoration: none;
+            font-size: 24px;
+            color: #B5BBF7;
         }
     </style>
 </head>
 <body>
+    <a href="https://ahmed-memon-56.github.io/JS-var-assignment/">var task</a>
    <h1> MY NAME IS AHMED</h1>
     <script src="app.js"></script>
 </body>
